--- a/angular.json
+++ b/angular.json
@@ -24,11 +24,7 @@
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": ["src/assets"],
-            "styles": [
-              "node_modules/primeng/resources/primeng.min.css",
-              "node_modules/primeicons/primeicons.css",
-              "src/styles.scss"
-            ],
+            "styles": ["node_modules/primeicons/primeicons.css", "src/styles.scss"],
             "scripts": [],
             "server": "src/main.server.ts",
             "prerender": true,
