--- a/angular.json
+++ b/angular.json
@@ -24,7 +24,7 @@
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": ["src/assets"],
-            "styles": ["node_modules/primeicons/primeicons.css", "src/styles.scss"],
+            "styles": ["src/styles.scss"],
             "scripts": [],
             "server": "src/main.server.ts",
             "prerender": true,
@@ -79,10 +79,10 @@
             "inlineStyleLanguage": "scss",
             "assets": ["src/assets"],
             "styles": [
-              "node_modules/primeng/resources/themes/lara-light-blue/theme.css",
-              "node_modules/primeng/resources/primeng.min.css",
+              "src/styles.scss",
+              "node_modules/primeng/resources/themes/vela/theme.css",
               "node_modules/primeicons/primeicons.css",
-              "src/styles.scss"
+              "node_modules/primeng/resources/primeng.min.css"
             ],
             "scripts": []
           }
