--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^18.2.0",
     "@angular/common": "^18.2.0",
     "@angular/compiler": "^18.2.0",
     "@angular/core": "^18.2.0",
@@ -23,6 +22,7 @@
     "@angular/ssr": "^18.2.12",
     "@primeng/themes": "^18.0.2",
     "express": "^4.18.2",
+    "ng-notify": "^0.7.1",
     "primeicons": "^7.0.0",
     "primeng": "^18.0.2",
     "rxjs": "~7.8.0",
